--- a/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
@@ -32,17 +32,58 @@
                     <div class="col-md-12">
                         <div class="card card-navy">
                             <div class="card-header">
-                                <div class="row">
-                                    <h4 class="col-md-2">Search By</h4>
-                                    <div class="col-md-3">
-                                        <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By Any" />
+                                <h6 class="card-title">Search By</h6>
+                            </div>
+                            <div class="card-body text-sm">
+                                <div class="row" style="margin-top:-15px">
+                                    @*<label style="margin-top:25px">Invoice No</label>
+        <div class="col-md-2"style="margin-top:25px">
+            <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By invoice" />
+        </div>*@
+
+                                    <div class="col-md-2">
+                                        <label class="col-form-label">InvoiceNo </label>
+                                        <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By invoice" />
                                     </div>
+                                    <div class="col-md-2">
+                                        <label>Product Name</label>
+                                        @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "--Select ProductName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                    </div>
+
+
+                                    <div class="col-md-2">
+                                        <label>Status</label>
+
+                                        <select class="form-control form-control-sm select2" id="ddlStatus">
+                                            <option value="" selected>--Select Status--</option>
+                                            <option value="ADJUST">ADJUST</option>
+                                            <option value="NOTADJUST">NOTADJUST</option>
+                                        </select>
+                                    </div>
+
+                                </div>
+
+
+
+                                    @*<div class="row">
+                    <div class="card-body text-sm">
+
+
+                        <h4 class="col-md-2">Search By</h4>
+                        <div class="col-md-3">
+                            <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By Any" />
+                        </div>
+
+
+    
+                    </div>
+                </div>*@
+
+
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-
                 <div class="row">
                     <div class="col-md-12">
                         <div class="card">
@@ -74,6 +115,8 @@
 
         var SearchAny = $("#SearchAny");
 
+        var ddlProductName = $("#ddlProductName");
+        var ddlStatus = $("#ddlStatus");
 
         $(document).ready(function () {
 
@@ -95,8 +138,18 @@
             LoadZoneDataTable()
         })
 
+        ddlProductName.change(function () {
+
+            LoadZoneDataTable();
+        })
+
+        ddlStatus.change(function () {
+
+            LoadZoneDataTable();
+        })
+
         function LoadZoneDataTable() {
-            var data = { flag: "View", name: $.trim(SearchAny.val()) }
+            var data = { flag: "View", name: $.trim(SearchAny.val()), ProductId: TryParseInt(ddlProductName.val(), 0), status: ddlStatus.val() }
             $.when(getReqWithData(dataType.html, type.get, '/AgroConfiguration/SalesReturnList', data)).then(function (res, status) {
                 console.log(res);
                 if (status == "success") {
